--- a/sitemap.html
+++ b/sitemap.html
@@ -114,8 +114,8 @@
 	<div id="top">
 		<nav>codenesthq.com HTML Site Map</nav>
 		<h3>
-<span>Last updated: 2024, July 21<br />
-Total pages: 4</span>
+<span>Last updated: 2024, August 2<br />
+Total pages: 10</span>
 <a href="https://codenesthq.com">codenesthq.com Homepage</a>
 </h3></div>
 	<div id="cont">
@@ -130,10 +130,16 @@ Total pages: 4</span>
 <li class="lpage last-page"><a href="https://codenesthq.com/terms/" title="Terms &amp; Conditions - CodeNestHQ">Terms & Conditions - CodeNestHQ</a></li>
 </ul><ul class="level-1">
 
-            <li class="lhead">tools/  <span class="lcount">2 pages</span></li>
+            <li class="lhead">tools/  <span class="lcount">8 pages</span></li>
             
 <li class="lpage"><a href="https://codenesthq.com/tools/" title="CodeNestHQ – Your Ultimate Hub for Free Online Tools and Calculators!">CodeNestHQ – Your Ultimate Hub for Free Online Tools and Calculators!</a></li>
-<li class="lpage last-page"><a href="https://codenesthq.com/tools/calculateReadingTime.php" title="Reading Time Calculator - CodeNestHQ">Reading Time Calculator - CodeNestHQ</a></li>
+<li class="lpage"><a href="https://codenesthq.com/tools/calculateReadingTime.php" title="Reading Time Calculator - CodeNestHQ">Reading Time Calculator - CodeNestHQ</a></li>
+<li class="lpage"><a href="https://codenesthq.com/tools/generateRandomWord.php" title="Random Word Generator - CodeNestHQ">Random Word Generator - CodeNestHQ</a></li>
+<li class="lpage"><a href="https://codenesthq.com/tools/convertTextBinary.php" title="Text to Binary/Binary to Text - CodeNestHQ">Text to Binary/Binary to Text - CodeNestHQ</a></li>
+<li class="lpage"><a href="https://codenesthq.com/tools/convertToSlug.php" title="Text to Slug - CodeNestHQ">Text to Slug - CodeNestHQ</a></li>
+<li class="lpage"><a href="https://codenesthq.com/tools/generateLoremIpsum.php" title="Lorem Ipsum Generator - CodeNestHQ">Lorem Ipsum Generator - CodeNestHQ</a></li>
+<li class="lpage"><a href="https://codenesthq.com/tools/encodeDecodeHTML.php" title="HTML Encoder/Decoder - CodeNestHQ">HTML Encoder/Decoder - CodeNestHQ</a></li>
+<li class="lpage last-page"><a href="https://codenesthq.com/tools/encodeDecodeURL.php" title="URL Encoder / URL Decoder - CodeNestHQ">URL Encoder / URL Decoder - CodeNestHQ</a></li>
 </ul></li>
 </ul>
 		<!--
